refactored to clean up